<resources>
    <string name="time_below_expected_label">time below expected</string>
    <string name="goal_time_left_placeholder">%1$sd %2$sh %3$smin</string>
    <string name="goal_percentage_completed_placeholder">%1$s</string>
    <string name="hours_placeholder">%1$sh</string>
    <string name="hours_and_minutes_placeholder">%1$sh %2$smin</string>
    <string name="edit_goal_appbar_label">Edit %1$s</string>

    <string name="app_name">GoalTracker</string>
    <string name="goal_time_amount_label">goal time</string>
    <string name="current_time_amount_label">current</string>
    <string name="goal_start_time_label">start</string>
    <string name="goal_end_time_label">deadline</string>
    <string name="goal_time_left_label">time left</string>
    <string name="goal_percentage_completed_label">% completed</string>
    <string name="goal_name_input_hint">name</string>
    <string name="goal_time_amount_input_hint">duration in hours</string>
    <string name="add_button_label">add</string>
    <string name="add_goal_appbar_label">Add goal</string>
    <string name="main_activity_appbar_label">Goal Tracker</string>
    <string name="goal_name_label">goal name</string>
    <string name="goal_start_date_label">start date</string>
    <string name="deadline_date_label">deadline</string>
    <string name="year_chart_label">time weekly</string>

    <string name="time_in_hours_label">time in hours</string>
    <string name="add_session_label">Add session</string>
    <string name="sessions_appbar_label">Sessions</string>
    <string name="total_time_label">total time</string>
    <string name="most_time_in_a_day_label">most in a day</string>
    <string name="longest_active_goal_label">longest goal</string>
    <string name="goal_with_most_time_label">goal with most time</string>
    <string name="avg_time_per_goal_label">average per goal</string>
    <string name="average_time_per_day_label">average per day</string>
    <string name="average_time_per_week_label">average per week</string>
    <string name="average_time_per_year_label">average per year</string>
    <string name="average_time_per_month_label">average per month</string>
    <string name="time_within_last_week_label">within last 7 days</string>
    <string name="time_within_last_month_label">this month</string>
    <string name="time_this_year_label">this year</string>
    <string name="average_to_reach_the_goal_label">average to reach the goal</string>
    <string name="average_label">average</string>
    <string name="progress_label">progress %</string>
    <string name="goal_stats_duration_label">time spent</string>
    <string name="save_changes_button_label">save changes</string>
    <string name="delete_button_label">delete</string>
    <string name="last_30_days_chart_label">last 30 days</string>
    <string name="hours_shortcut_label">h</string>
    <string name="minutes_shortcut_label">min</string>
    <string name="month_chart_label">time daily</string>
    <string name="confirm_popup_question">Are you sure?</string>
    <string name="no_button_label">no</string>
    <string name="yes_button_label">yes</string>
    <string name="settings_appbar_label">Settings</string>
    <string name="clear_all_data_button_label">Clear all data</string>
</resources>