<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/appbar_edit_goal"
                android:background="@color/black"
                app:layout_constraintTop_toTopOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id = "@+id/appbar_text_view"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf = "parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/white"
                        android:textSize = "25sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="20dp"
                        android:text = "@string/edit_goal_appbar_label"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/edit_goal_name_label"
                app:layout_constraintTop_toBottomOf="@id/appbar_edit_goal"
                android:text = "@string/goal_name_label"
                android:textSize = "20sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/edit_goal_name_input_layout"
                app:layout_constraintTop_toBottomOf="@id/edit_goal_name_label"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style = "?attr/textInputOutlinedStyle">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id = "@+id/edit_goal_name_input"
                    android:hint = "@string/goal_name_input_hint"/>
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/edit_goal_time_amount_label"
                app:layout_constraintTop_toBottomOf="@id/edit_goal_name_input_layout"
                android:text = "@string/goal_time_amount_label"
                android:textSize = "20sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/edit_goal_time_amount_input_layout"
                app:layout_constraintTop_toBottomOf="@id/edit_goal_time_amount_label"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style = "?attr/textInputOutlinedStyle">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id = "@+id/edit_goal_time_amount_input"
                    android:inputType="number"
                    android:hint = "@string/goal_time_amount_input_hint"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/edit_goal_start_time_label"
                app:layout_constraintTop_toBottomOf="@id/edit_goal_time_amount_input_layout"
                android:text = "@string/goal_start_date_label"
                android:textSize = "20sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/edit_goal_start_date"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                app:layout_constraintTop_toBottomOf="@id/edit_goal_start_time_label"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/edit_goal_deadline_date_label"
                app:layout_constraintTop_toBottomOf="@id/edit_goal_start_date"
                android:text = "@string/deadline_date_label"
                android:textSize = "20sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/edit_goal_deadline_date"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_marginBottom="25dp"
                app:layout_constraintTop_toBottomOf="@id/edit_goal_deadline_date_label"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id = "@+id/edit_goal_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete_goal_button"
        android:text="@string/save_changes_button_label"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id = "@+id/delete_goal_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_goal_button"
        android:text="@string/delete_button_label"
        android:backgroundTint="@color/delete_red"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
