<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/appbar_add_goal"
        android:background="@color/appbar_background_color"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id = "@+id/appbar_text_view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf = "parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/white"
                android:textSize = "25sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:text = "@string/add_goal_appbar_label"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/appbar_add_goal"
        app:layout_constraintBottom_toTopOf="@id/add_goal_button"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/add_goal_name_label"
                app:layout_constraintTop_toTopOf="parent"
                android:text = "@string/goal_name_label"
                android:textSize = "20sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/add_goal_name_input_layout"
                app:layout_constraintTop_toBottomOf="@id/add_goal_name_label"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style = "?attr/textInputOutlinedStyle">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id = "@+id/add_goal_name_input"
                    android:hint = "@string/goal_name_input_hint"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/add_goal_time_amount_label"
                app:layout_constraintTop_toBottomOf="@id/add_goal_name_input_layout"
                android:text = "@string/goal_time_amount_label"
                android:textSize = "20sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

           <NumberPicker
               android:layout_width="wrap_content"
               android:layout_height="120dp"
               android:id = "@+id/add_goal_hour_picker"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toStartOf="@id/add_goal_minute_picker"
               app:layout_constraintTop_toBottomOf="@id/add_goal_time_amount_label"
               app:layout_constraintBottom_toTopOf="@id/add_goal_start_time_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/hours_shortcut_label"
                app:layout_constraintStart_toEndOf="@id/add_goal_hour_picker"
                app:layout_constraintTop_toTopOf="@id/add_goal_hour_picker"
                app:layout_constraintBottom_toBottomOf="@id/add_goal_hour_picker"
                android:textSize = "20sp"
                android:layout_marginStart="10dp"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:id = "@+id/add_goal_minute_picker"
                app:layout_constraintStart_toEndOf="@id/add_goal_hour_picker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/add_goal_hour_picker"
                app:layout_constraintBottom_toBottomOf="@id/add_goal_hour_picker"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/minutes_shortcut_label"
                app:layout_constraintStart_toEndOf="@id/add_goal_minute_picker"
                app:layout_constraintTop_toTopOf="@id/add_goal_minute_picker"
                app:layout_constraintBottom_toBottomOf="@id/add_goal_minute_picker"
                android:textSize = "20sp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/add_goal_start_time_label"
                app:layout_constraintTop_toBottomOf="@id/add_goal_hour_picker"
                android:text = "@string/goal_start_date_label"
                android:textSize = "20sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/add_goal_start_date"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                app:layout_constraintTop_toBottomOf="@id/add_goal_start_time_label"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/add_goal_deadline_date_label"
                app:layout_constraintTop_toBottomOf="@id/add_goal_start_date"
                android:text = "@string/deadline_date_label"
                android:textSize = "20sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/add_goal_deadline_date"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_marginBottom="25dp"
                app:layout_constraintTop_toBottomOf="@id/add_goal_deadline_date_label"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/add_goal_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/add_button_label"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
