<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/goal_stats_duration_label"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/goal_stats_duration"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:text = "15.13h"
        android:textAlignment="center"
        android:textSize = "25sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/progress_label"
        app:layout_constraintBottom_toTopOf="@id/goal_stats_progress"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/goal_stats_progress"
        app:layout_constraintTop_toBottomOf="@id/goal_stats_duration"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:text = "69.69%"
        android:textAlignment="center"
        android:textSize = "25sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/goal_stats_average_label"
        android:text = "@string/average_label"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/goal_stats_average"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/goal_stats_average"
        app:layout_constraintTop_toBottomOf="@id/goal_stats_progress"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:text = "13.17h"
        android:textAlignment="center"
        android:textSize = "25sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/goal_stats_average_to_reach_goal_label"
        android:text = "@string/average_to_reach_the_goal_label"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/goal_stats_average_to_reach_goal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/goal_stats_average_to_reach_goal"
        app:layout_constraintTop_toBottomOf="@id/goal_stats_average"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:text = "10.13h"
        android:textAlignment="center"
        android:textSize = "25sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>